# ay-driver

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: notegen.rs  stm32l475.rs  usbmidi.rs
src/: lib.rs  main.rs
